--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,7 @@
     <div class="header">
         <app-header></app-header>
     </div>
-    <div class="sidebar" >
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="home">
-        <app-home></app-home>
+    <div class="content">
+        <app-content></app-content>
     </div>
 </div>
