--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,16 +1,16 @@
 <div class="sidebar" > 
     <div class="home">
         <fa-icon class="home" [icon]="faHome"></fa-icon>
-        <span>Home</span>
+        <span class="icon-text">Home</span>
     </div>
     <div class="my-task">
         <fa-icon class="my-task" [icon]="faListCheck"></fa-icon>
-        <span>My Tasks</span>
+        <span class="icon-text">My Tasks</span>
     </div>
 
     <div class="help">
         <fa-icon class="my-task" [icon]="faQuestionCircle"></fa-icon>
-        <span>help</span>
+        <span class="icon-text">help</span>
     </div>
 </div>
 
