--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -10,11 +10,25 @@
 
 .sidebar div:last-child{
     margin-top: auto;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .my-task, .home, .help{
-        padding: 10px 10px;
+        padding: 15px 10px;
         font-size: 25px;
         color: white;
+}
+
+.help{
+    padding: 10px 10px;
+}
+
+
+@media screen and (max-width: 800px) {
+
+
+    .icon-text{
+        display: none;
+    }
+
 }
