--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="home">
-    <p class="home-title">Dashboard</p>
-    <div class="date">{{date | date:'fullDate'}}</div>
-    <div class="greeting">{{greetingMsg()}} Sushil</div>
+    <div class="dashboard">
+        <p class="home-title">Dashboard</p>
+    <div class="date">{{date | date:'EEEE, d	LLL y'}}</div>
+    <div class="greeting">{{greetingMsg()}}, Sushil</div>
     <div class="task-info">
         <div class="filter">
             <!-- <label for="cars">Choose a car:</label> -->
@@ -14,9 +15,14 @@
             </div>
         <div class="task-completed">
             <fa-icon class="check-icon" [icon]="faCircleCheck"></fa-icon>
-            <i class="fa-solid fa-circle-check"></i>
-            5 Tasks completed</div>  
-        <div class="task-assigned">15 Tasks assigned</div>
+            <!-- <i class="fa-solid fa-circle-check"></i> -->
+            <span>5 </span>
+            Tasks completed</div>  
+        <div class="task-assigned"> <span>14 </span> Tasks assigned</div>
+    </div>
+    </div>
+    <div class="task-list-priorities">
+        <app-task-list></app-task-list>
     </div>
     <div class="copyright">
         <div>©copyright 2022.</div>
