--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,13 @@
     height: 100%;
     width: 100%;
     position: relative;
-    overflow: hidden;
+    // overflow: auto;
+    // background-color: burlywood;
+}
+
+.dashboard{
+    height: 220px;
+    // background-color: aquamarine;
 }
 
 .copyright{
@@ -11,6 +17,7 @@
     width: 100%;
     text-align: center;
     padding: 10px;
+    background-color: white;
     border: 2px solid #275187;
 }
 
@@ -67,9 +74,31 @@
     flex-grow: 1;
 }
 
+.task-completed span{
+    font-size: 25px;
+    margin: 3px;
+}
+
+.task-assigned span{
+    font-size: 25px;
+    margin: 3px
+}
+
+
+
 .task-assigned{
     display: flex;
     justify-content: left;
     align-items: center;
     flex-grow: 1;
+}
+
+
+.task-list-priorities{
+    // box-sizing: border-box;
+    // background-color: antiquewhite;
+    // margin: 10px;
+    padding: 20px;
+    height: calc(100% - 220px);
+    // overflow: auto;
 }
