--- a/src/app/content/content.page.html
+++ b/src/app/content/content.page.html
@@ -3,6 +3,6 @@
         <app-sidebar></app-sidebar>
     </div>
     <div class="home">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
     </div>
 </div>
