--- a/src/app/content/content.page.scss
+++ b/src/app/content/content.page.scss
@@ -19,12 +19,17 @@
 @media screen and (max-width: 800px) {
 
     .home {
-        width: calc(100% - 70px);
+        // width: calc(100% - 70px);
+        height: auto;
+        width: 100%;
+
     }
 
 
     .sidebar{
-        width: 70px;
+        // width: 70px;
+        width: 100%;
+        height: auto;
     }
 
 }
