--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -18,7 +18,6 @@
         font-size: 25px;
         color: white;
         cursor: pointer;
-
 }
 
 .help{
@@ -30,7 +29,32 @@
 
 
     .icon-text{
-        display: none;
+        width: 100%;
+        // background-color: bisque;
+        display: block;
+        text-align: center;
     }
+
+
+    .sidebar{
+        flex-direction: row;
+        // justify-content: center;
+        align-items: stretch;
+    }
+
+    .my-task, .home, .help{
+        // width: 100%;
+        padding: 0;
+        justify-content: center;
+        text-align: center;
+        padding: 0px 20px;
+        margin: 0;
+        flex-grow: 1;
+        // align-items: center;
+        // background-color: aquamarine;
+        // align-items: center;
+    }
+
+    
 
 }
