--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -1,4 +1,4 @@
-.list-title{
+.list-title {
     display: flex;
     align-items: center;
     // background-color: bisque;
@@ -6,21 +6,35 @@
 }
 
 
-.task-title{
+.task-title {
     font-size: 20px;
     font-weight: 500;
     margin-right: 5px;
 }
 
-.add-icon{
+.add-icon {
     color: rgb(131, 218, 0);
     font-size: 25px;
     margin: 5px;
 }
 
-.task-list-container{
+.task-list-container {
     height: calc(100% - 50px);
     // background-color: aquamarine;
     overflow: auto;
     // padding-bottom: 65px;
+}
+
+
+@media screen and (max-width: 800px) {
+
+    .task-list-container {
+        height: auto;
+        padding: 10px 0px;
+        margin-top: 30px;
+
+        // background-color: aquamarine;
+        overflow: auto;
+    }
+
 }
