added pixed position for header

--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -34,7 +34,7 @@
         margin-top: 30px;
 
         // background-color: aquamarine;
-        overflow: auto;
+        // overflow: auto;
     }
 
 }
