--- a/src/app/content/content.page.scss
+++ b/src/app/content/content.page.scss
@@ -18,18 +18,20 @@
 
 @media screen and (max-width: 800px) {
 
+    .content-container{
+        overflow: auto;
+    }
+
     .home {
         // width: calc(100% - 70px);
-        height: auto;
+        height: calc(100% - 90px);
         width: 100%;
-
     }
 
 
     .sidebar{
-        // width: 70px;
         width: 100%;
-        height: auto;
+        height: 90px;
     }
 
 }
