till the 7 min demo

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,14 +3,13 @@
         <fa-icon class="home" [icon]="faHome"></fa-icon>
         <span class="icon-text">Home</span>
     </div>
-    <div class="my-task" class="home" routerLink="/myTasks">
-
+    <div class="my-task"  routerLink="/myTasks">
         <fa-icon class="my-task" [icon]="faListCheck"></fa-icon>
         <span class="icon-text">My Tasks</span>
     </div>
 
     <div class="help">
-        <fa-icon class="my-task" [icon]="faQuestionCircle"></fa-icon>
+        <fa-icon class="help" [icon]="faQuestionCircle"></fa-icon>
         <span class="icon-text">help</span>
     </div>
 </div>
