dialog component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     </div>
     <div class="content">
         <app-content></app-content>
+        <!-- <app-add-task-dialog></app-add-task-dialog> -->
     </div>
 </div>
