--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,8 +21,11 @@
         <div class="task-assigned"> <span>14 </span> Tasks assigned</div>
     </div>
     </div>
+    <div class="add-task-dialog">
+        <app-add-task-dialog [isOpen]="isDialogOpen" (addTaskEvent)="addTask($event)"></app-add-task-dialog>
+    </div>
     <div class="task-list-priorities">
-        <app-task-list></app-task-list>
+        <app-task-list (addTaskEvent)="addTask($event)"></app-task-list>
     </div>
     <div class="copyright">
         <div>©copyright 2022.</div>
