--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,6 +11,18 @@
     // background-color: aquamarine;
 }
 
+
+
+.add-task-dialog{
+    width: 60%;
+    background-color:aqua;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
 .copyright {
     position: absolute;
     bottom: 0;
@@ -125,6 +137,9 @@
         // background-color: aquamarine;
     }
 
+
+
+
     .filter,
     .task-assigned,
     .task-completed {
@@ -146,10 +161,6 @@
         bottom: 0;
         width: 100%;
     }
-
-
-
-
 
 
     .task-list-priorities {
