--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,9 +1,5 @@
-<div class="list-title" >
-    <span class="task-title">My Priorities</span>
-    <span class="title-des">(next 3 days - high priority)</span>
-    <fa-icon class="add-icon" [icon]="faCircleCheck"></fa-icon>
 
-</div>
+<app-task-list-header (addTaskEvent)="addTask($event)"></app-task-list-header>
 <div class="task-list-container">
     <div  *ngFor="let task of taskList">
         <app-task-item [tempTask]="task"></app-task-item>
