--- a/src/app/task-list-header/task-list-header.component.html
+++ b/src/app/task-list-header/task-list-header.component.html
@@ -1,5 +1,8 @@
 <div class="list-title" >
-    <span class="task-title">My Priorities</span>
-    <span class="title-des">(next 3 days - high priority)</span>
+    <span class="task-title">{{title}}</span> 
+    <span class="title-des">{{description}}</span>
     <fa-icon class="add-icon" (click)="addTask()" [icon]="faCirclePlus"></fa-icon>
 </div>
+
+
+
