--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,10 @@
-<div class="sidebar" > 
-    <div class="home" routerLink="/home">
+<div class="sidebar" (click)="onNavClicked()"> 
+    <div class="home "  [class.selectedPage]="'/home' === activePage || '/' === activePage" routerLink="/home"  >
         <fa-icon class="home" [icon]="faHome"></fa-icon>
         <span class="icon-text">Home</span>
     </div>
-    <div class="my-task"  routerLink="/myTasks">
+
+    <div class="my-task" [class.selectedPage]="'/myTasks' === activePage" routerLink="/myTasks">
         <fa-icon class="my-task" [icon]="faListCheck"></fa-icon>
         <span class="icon-text">My Tasks</span>
     </div>
