--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -4,13 +4,12 @@
     background-color: #044d66;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
 }
 
 
 .sidebar div:last-child{
     margin-top: auto;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
 }
 
 .my-task, .home, .help{
@@ -20,9 +19,27 @@
         cursor: pointer;
 }
 
+
+.selectedPage{
+    background-color: rgba(218, 218, 218, 0.24);
+    border: 1px solid black;
+}
+
+
+
+
+
 .help{
     padding: 10px 10px;
 }
+
+.sidebar div:hover{
+    background-color: rgba(218, 218, 218, 0.085);
+}
+
+// .sidebar div:active{
+//     background-color: rgba(218, 218, 218, 0.24);
+// }
 
 
 @media screen and (max-width: 800px) {
@@ -40,6 +57,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: stretch;
+        padding: 0;
     }
 
     .sidebar div:last-child{
@@ -48,15 +66,15 @@
 
     .my-task, .home, .help{
         // width: 100%;
-        padding: 0;
+        height: auto;
+        padding: 10px;
         justify-content: center;
         text-align: center;
-        padding: 0px 20px;
+        font-size: 20px;
         margin: 0;
         flex-grow: 1;
         // align-items: center;
         // background-color: aquamarine;
-        // align-items: center;
     }
 
     // .help{
