--- a/src/app/task-list-header/task-list-header.component.scss
+++ b/src/app/task-list-header/task-list-header.component.scss
@@ -17,3 +17,11 @@
     font-size: 25px;
     margin: 5px;
 }
+
+
+@media screen and (max-width: 800px) {
+
+    .task-title ,.add-icon{
+        font-size: 16px;
+    }
+}    
