--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -1,7 +1,6 @@
 
-
 .task-list-container {
-    height: calc(100% - 50px);
+    height: calc(100% - 30px);
     // background-color: aquamarine;
     overflow: auto;
 }
@@ -10,9 +9,9 @@
 @media screen and (max-width: 800px) {
 
     .task-list-container {
-        height: auto;
-        padding: 10px 0px;
-        margin-top: 30px;
+        // height: auto;
+        // padding: 10px 0px;
+        // margin-top: 30px;
 
         // background-color: aquamarine;
         // overflow: auto;
