--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,8 @@
     background-color:#044d66;
     display: flex;
     align-items: center;
-    border-bottom: 2px solid #107a9e;
+    border: 2px solid #107a9e;
+    border-bottom: none;
     padding: 0px 10px;
 }
 
