--- a/src/app/add-task-dialog/add-task-dialog.component.html
+++ b/src/app/add-task-dialog/add-task-dialog.component.html
@@ -8,17 +8,17 @@
 
     <label for="title">Title</label>
     <br>
-    <input type="text" id="title" name="title">
+    <input type="text" id="title" [(ngModel)]="title" name="title">
 
     <br>
     <label for="description">description</label>
     <br>
-    <input type="text" id="description" name="description">
+    <input type="text" id="description" [(ngModel)]="description" name="description">
 
     <br>
     <label for="priority">priority</label>
     <br>
-    <select name="priority" id="priority">
+    <select name="priority" [(ngModel)]="priority" id="priority">
         <option value="high">high</option>
         <option value="medium">medium</option>
         <option value="low">low</option>
@@ -26,12 +26,12 @@
 
 
       <br>
-      <label for="due-date">Due Date</label>
+      <label for="due-date"  >Due Date</label>
       <br>
-      <input type="date" id="due-date" name="due-date">
+      <input type="date" id="due-date" [(ngModel)]="dueDate" name="due-date">
       <br>
 
-      <button class="form-button" type="button">Save</button>
+      <button class="form-button" type="button" (click)="setTask()">Save</button>
       <button class="form-button" type="Close" (click)="closeDialog()">Close</button>
 
 
