--- a/src/app/my-tasks/my-tasks.component.html
+++ b/src/app/my-tasks/my-tasks.component.html
@@ -10,7 +10,10 @@
     </div>
     <div class="task-lists-containder">
         <div class="task-list" *ngFor="let list of taskListsArray">
-            <app-task-list [title]="list.title" [description]="list.description" (addTaskEvent)="addTask($event)"></app-task-list>
+            <app-task-list [title]="list.title" [description]="list.description" [taskList]="list.tasks" (addTaskEvent)="addTask($event)"></app-task-list>
         </div>
+    </div>
+    <div class="footer">
+        <app-footer></app-footer>
     </div>
 </div>
