--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -2,19 +2,19 @@
 .task-list-container {
     height: calc(100% - 30px);
     // background-color: aquamarine;
-    overflow: auto;
+    // overflow: auto;
 }
 
 
 @media screen and (max-width: 800px) {
 
-    .task-list-container {
-        // height: auto;
-        // padding: 10px 0px;
-        // margin-top: 30px;
+    // .task-list-container {
+    //     // height: auto;
+    //     // padding: 10px 0px;
+    //     // margin-top: 30px;
 
-        // background-color: aquamarine;
-        // overflow: auto;
-    }
+    //     // background-color: aquamarine;
+    //     // overflow: auto;
+    // }
 
 }
