--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,8 @@
 *{
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
 }
 
 
-$base-color: #c6538c;
-$border-color: rgba($base-color, 0.88);
+
