--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,11 +3,15 @@
     width: 100%;
     position: relative;
     border: 2px solid #107a9e;
-
 }
 
 .dashboard {
     height: 220px;
+}
+
+.content{
+    height: calc(100% - 40px);
+    overflow: auto;
 }
 
 
@@ -24,6 +28,9 @@
 
 
 .footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 40px;
 }
 
