--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -2,7 +2,7 @@
 <app-task-list-header [title]="title" [description]="description"  (addTaskEvent)="addTask($event)"></app-task-list-header>
 <div class="task-list-container">
     <div  *ngFor="let task of taskList">
-        <app-task-item [tempTask]="task"></app-task-item>
+        <app-task-item [task]="task"  (click)="onTaskClicked(task)" ></app-task-item>
     </div>
 </div>
 
